Minor change for reports.

--- a/Mnemosyne.ipynb
+++ b/Mnemosyne.ipynb
@@ -356,13 +356,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 239,
+      "execution_count": 271,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FBTdy4Ta4Y6S",
-        "outputId": "40667bb0-2b38-4d93-d257-ebc18c3a7557"
+        "outputId": "efafcfb1-e131-4372-fb72-cc7e088e2aad"
       },
       "outputs": [
         {
@@ -426,13 +426,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 240,
+      "execution_count": 272,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dYGILMcJNBGR",
-        "outputId": "38d25561-fda0-4eb2-8301-1403eb078cf9"
+        "outputId": "53a3ec27-534a-482a-ff21-08d651f651dc"
       },
       "outputs": [
         {
@@ -543,7 +543,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 241,
+      "execution_count": 273,
       "metadata": {
         "id": "kz_3yOD5IAfM"
       },
@@ -1175,7 +1175,7 @@
       "metadata": {
         "id": "BWtFPZDfv2go"
       },
-      "execution_count": 242,
+      "execution_count": 274,
       "outputs": []
     },
     {
@@ -1189,7 +1189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 243,
+      "execution_count": 275,
       "metadata": {
         "id": "clkDemShJa_t"
       },
@@ -1254,7 +1254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 244,
+      "execution_count": 276,
       "metadata": {
         "id": "MCVYYMEA4hzJ"
       },
@@ -1325,7 +1325,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 245,
+      "execution_count": 277,
       "metadata": {
         "id": "vRqGyyRRmTh9"
       },
@@ -1375,7 +1375,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 246,
+      "execution_count": 278,
       "metadata": {
         "id": "_LuiIAEBm0jI"
       },
@@ -1410,7 +1410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 247,
+      "execution_count": 279,
       "metadata": {
         "id": "UEoq7IHJm_nI"
       },
@@ -1473,7 +1473,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 248,
+      "execution_count": 280,
       "metadata": {
         "id": "6d3RPLqmmjS4"
       },
@@ -1803,7 +1803,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 249,
+      "execution_count": 281,
       "metadata": {
         "id": "3UZHlLrFM_w7"
       },
@@ -2263,7 +2263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 250,
+      "execution_count": 282,
       "metadata": {
         "id": "QsInh4IFyXnl"
       },
@@ -2493,7 +2493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 251,
+      "execution_count": 283,
       "metadata": {
         "id": "yRVUUVAjunrK"
       },
@@ -2598,7 +2598,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 252,
+      "execution_count": 284,
       "metadata": {
         "id": "HrKlx_qve7_c"
       },
@@ -2921,7 +2921,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 253,
+      "execution_count": 285,
       "metadata": {
         "id": "NfgPOjFFhpE-"
       },
@@ -3073,7 +3073,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 254,
+      "execution_count": 286,
       "metadata": {
         "id": "jqOvCj8F1r33"
       },
@@ -3469,7 +3469,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 255,
+      "execution_count": 287,
       "metadata": {
         "id": "IVpo7CydwfYp"
       },
@@ -3529,7 +3529,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 256,
+      "execution_count": 288,
       "metadata": {
         "id": "4LMoue7Kwws-"
       },
@@ -3757,7 +3757,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 257,
+      "execution_count": 289,
       "metadata": {
         "id": "jjSLkhrLw7fX"
       },
@@ -4048,7 +4048,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 258,
+      "execution_count": 290,
       "metadata": {
         "id": "madKwS2mqoln"
       },
@@ -4288,12 +4288,12 @@
       "metadata": {
         "id": "7An_ndVI-h5I"
       },
-      "execution_count": 259,
+      "execution_count": 291,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 260,
+      "execution_count": 292,
       "metadata": {
         "id": "s-qABwUs2pnA"
       },
@@ -4423,7 +4423,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 261,
+      "execution_count": 293,
       "metadata": {
         "id": "urhKizid3PHj"
       },
@@ -4534,7 +4534,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 262,
+      "execution_count": 294,
       "metadata": {
         "id": "X0wgs70GClve"
       },
@@ -4730,16 +4730,16 @@
         "        if not isinstance(text, str):\n",
         "            text = str(text)\n",
         "        # CORRECTED: Added backslash replacement\n",
-        "        return text.replace('\\\\', r'\\\\textbackslash{}') \\\n",
-        "                   .replace('{', r'\\\\{') \\\n",
-        "                   .replace('}', r'\\\\}') \\\n",
-        "                   .replace('#', r'\\\\#') \\\n",
-        "                   .replace('$', r'\\\\$') \\\n",
-        "                   .replace('%', r'\\\\%') \\\n",
-        "                   .replace('&', r'\\\\&') \\\n",
-        "                   .replace('_', r'\\\\_') \\\n",
-        "                   .replace('^', r'\\\\textasciicircum{}') \\\n",
-        "                   .replace('~', r'\\\\textasciitilde{}')\n",
+        "        return text.replace('\\\\', r'\\textbackslash{}') \\\n",
+        "                   .replace('{', r'\\{') \\\n",
+        "                   .replace('}', r'\\}') \\\n",
+        "                   .replace('#', r'\\#') \\\n",
+        "                   .replace('$', r'\\$') \\\n",
+        "                   .replace('%', r'\\%') \\\n",
+        "                   .replace('&', r'\\&') \\\n",
+        "                   .replace('_', r'\\_') \\\n",
+        "                   .replace('^', r'\\textasciicircum{}') \\\n",
+        "                   .replace('~', r'\\textasciitilde{}')\n",
         "\n",
         "    def _add_line(self, line=\"\"):\n",
         "        self.latex_content.append(line)\n",
@@ -4888,7 +4888,7 @@
       "metadata": {
         "id": "4EM2FmKL51bh"
       },
-      "execution_count": 263,
+      "execution_count": 295,
       "outputs": []
     },
     {
@@ -5192,7 +5192,7 @@
       "metadata": {
         "id": "djg0IVctsb4m"
       },
-      "execution_count": 264,
+      "execution_count": 296,
       "outputs": []
     },
     {
@@ -5206,7 +5206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 265,
+      "execution_count": 297,
       "metadata": {
         "id": "FlJJltyoaxn2"
       },
@@ -5321,7 +5321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 266,
+      "execution_count": 298,
       "metadata": {
         "id": "Dk64HrKmI1tQ"
       },
@@ -5828,7 +5828,7 @@
       "metadata": {
         "id": "ne592r-4qT8O"
       },
-      "execution_count": 267,
+      "execution_count": 299,
       "outputs": []
     },
     {
@@ -6211,7 +6211,7 @@
       "metadata": {
         "id": "5VnLTXPTkrh7"
       },
-      "execution_count": 268,
+      "execution_count": 300,
       "outputs": []
     },
     {
@@ -6378,7 +6378,7 @@
       "metadata": {
         "id": "ozfjACkyFjxh"
       },
-      "execution_count": 269,
+      "execution_count": 301,
       "outputs": []
     },
     {
@@ -6393,13 +6393,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 270,
+      "execution_count": 302,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Yp7sEX5GT2BE",
-        "outputId": "0853c2c8-06a5-4e22-8d89-320cdda744f4"
+        "outputId": "9527c675-d599-4f7d-f0a5-7f495bd99584"
       },
       "outputs": [
         {
@@ -6411,7 +6411,7 @@
             "INFO - Neo4j connection closed.\n",
             "INFO - Neo4j connection successful.\n",
             "INFO - --- Starting Experiment Run: 15 groups defined ---\n",
-            "INFO - Run ID: RUN_2025-09-19_18-15-29\n",
+            "INFO - Run ID: RUN_2025-09-19_18-23-46\n",
             "INFO - ==================================================================================================================================\n",
             "INFO - EVALUATING GROUP: Utility: Environment Cleanup (GRP001)\n",
             "INFO - Executing utility task: Clearing database.\n",
@@ -6467,18 +6467,18 @@
             "INFO -   Successfully loaded KG from GRP201EXP001_kg_dump.json\n",
             "INFO - ✅ END: Loading KG from dump file.\n",
             "INFO - ▶️ START: Generating extracted entity word cloud...\n",
-            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-15-29/GRP901EXP001_entity_wordcloud.png\n",
+            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-23-46/GRP901EXP001_entity_wordcloud.png\n",
             "INFO - ✅ END: Generating extracted entity word cloud.\n",
             "INFO - ▶️ START: Generating relationship type word cloud...\n",
-            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-15-29/GRP901EXP001_relationship_wordcloud.png\n",
+            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-23-46/GRP901EXP001_relationship_wordcloud.png\n",
             "INFO - ✅ END: Generating relationship type word cloud.\n",
             "INFO - ▶️ START: Generating ontology type graph...\n",
-            "INFO -   Saved ontology graph to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-15-29/GRP901EXP001_ontology_graph.png\n",
+            "INFO -   Saved ontology graph to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-23-46/GRP901EXP001_ontology_graph.png\n",
             "INFO - ✅ END: Generating ontology type graph.\n",
             "INFO - ▶️ START: Exporting final graph to JSON...\n",
             "INFO -   Exporting graph for experiment 'GRP901EXP001'...\n",
             "INFO -   Exported 83 nodes and 230 relationships.\n",
-            "INFO -   Successfully saved graph data to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-15-29/GRP901_Utility__Load_Graph_from_Dump/GRP901EXP001_kg_dump.json\n",
+            "INFO -   Successfully saved graph data to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-23-46/GRP901_Utility__Load_Graph_from_Dump/GRP901EXP001_kg_dump.json\n",
             "INFO - ✅ END: Exporting final graph to JSON.\n",
             "INFO - Neo4j connection closed.\n",
             "INFO - Configuration for 'GRP901EXP002' validated successfully.\n",
@@ -6489,35 +6489,35 @@
             "INFO -   Successfully loaded KG from GRP201EXP001_kg_dump.json\n",
             "INFO - ✅ END: Loading KG from dump file.\n",
             "INFO - ▶️ START: Generating LaTeX Analysis Report for GRP901EXP002...\n",
-            "INFO -   Successfully saved LaTeX analysis report to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-15-29/GRP901_Utility__Load_Graph_from_Dump/GRP901EXP002_analysis_report.tex\n",
+            "INFO -   Successfully saved LaTeX analysis report to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-23-46/GRP901_Utility__Load_Graph_from_Dump/GRP901EXP002_analysis_report.tex\n",
             "INFO - ✅ END: Generating LaTeX Analysis Report for GRP901EXP002.\n",
             "INFO - ▶️ START: Generating extracted entity word cloud...\n",
-            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-15-29/GRP901EXP002_entity_wordcloud.png\n",
+            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-23-46/GRP901EXP002_entity_wordcloud.png\n",
             "INFO - ✅ END: Generating extracted entity word cloud.\n",
             "INFO - ▶️ START: Generating relationship type word cloud...\n",
-            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-15-29/GRP901EXP002_relationship_wordcloud.png\n",
+            "INFO -   Saved word cloud to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-23-46/GRP901EXP002_relationship_wordcloud.png\n",
             "INFO - ✅ END: Generating relationship type word cloud.\n",
             "INFO - ▶️ START: Generating ontology type graph...\n",
-            "INFO -   Saved ontology graph to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-15-29/GRP901EXP002_ontology_graph.png\n",
+            "INFO -   Saved ontology graph to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-23-46/GRP901EXP002_ontology_graph.png\n",
             "INFO - ✅ END: Generating ontology type graph.\n",
             "INFO - ▶️ START: Exporting final graph to JSON...\n",
             "INFO -   Exporting graph for experiment 'GRP901EXP002'...\n",
             "INFO -   Exported 83 nodes and 230 relationships.\n",
-            "INFO -   Successfully saved graph data to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-15-29/GRP901_Utility__Load_Graph_from_Dump/GRP901EXP002_kg_dump.json\n",
+            "INFO -   Successfully saved graph data to /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-23-46/GRP901_Utility__Load_Graph_from_Dump/GRP901EXP002_kg_dump.json\n",
             "INFO - ✅ END: Exporting final graph to JSON.\n",
             "INFO - Neo4j connection closed.\n",
-            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-15-29/GRP901_Utility__Load_Graph_from_Dump/default_filename.csv\n",
-            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-15-29/GRP901_Utility__Load_Graph_from_Dump/04_kg_metrics.csv\n",
-            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-15-29/GRP901_Utility__Load_Graph_from_Dump/05_kg_nodes.csv\n",
-            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-15-29/GRP901_Utility__Load_Graph_from_Dump/default_filename.csv\n",
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-23-46/GRP901_Utility__Load_Graph_from_Dump/default_filename.csv\n",
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-23-46/GRP901_Utility__Load_Graph_from_Dump/04_kg_metrics.csv\n",
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-23-46/GRP901_Utility__Load_Graph_from_Dump/05_kg_nodes.csv\n",
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-23-46/GRP901_Utility__Load_Graph_from_Dump/default_filename.csv\n",
             "INFO - ==================================================================================================================================\n",
             "INFO - ALL EXPERIMENTS COMPLETED\n",
-            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-15-29/00_master_run_summary.csv\n",
-            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-15-29/04_kg_metrics.csv\n",
-            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-15-29/05_kg_nodes.csv\n",
-            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-15-29/06_kg_relationships.csv\n",
-            "INFO - Successfully saved LaTeX summary to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-15-29/08_run_summary.tex\n",
-            "INFO - --- Run RUN_2025-09-19_18-15-29 finished ---\n"
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-23-46/00_master_run_summary.csv\n",
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-23-46/04_kg_metrics.csv\n",
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-23-46/05_kg_nodes.csv\n",
+            "INFO - Saved results to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-23-46/06_kg_relationships.csv\n",
+            "INFO - Successfully saved LaTeX summary to: /content/drive/MyDrive/Mnemosyne/Output/RUN_2025-09-19_18-23-46/08_run_summary.tex\n",
+            "INFO - --- Run RUN_2025-09-19_18-23-46 finished ---\n"
           ]
         },
         {
@@ -6527,8 +6527,8 @@
             "\n",
             "--- MASTER EXPERIMENT RUN SUMMARY ---\n",
             "  group_id experiment_id                    experiment_name   status  duration_seconds  consolidation_duration_seconds ground_truth_source overall_score entity_f1_score relationship_f1_score error\n",
-            "0   GRP901  GRP901EXP001             Load GRP201EXP001 Dump  Success         57.501222                             0.0                 N/A           N/A             N/A                   N/A      \n",
-            "1   GRP901  GRP901EXP002  Load GRP201EXP001 Dump and Report  Success         57.167822                             0.0                 N/A           N/A             N/A                   N/A      \n"
+            "0   GRP901  GRP901EXP001             Load GRP201EXP001 Dump  Success         55.452864                             0.0                 N/A           N/A             N/A                   N/A      \n",
+            "1   GRP901  GRP901EXP002  Load GRP201EXP001 Dump and Report  Success         57.243202                             0.0                 N/A           N/A             N/A                   N/A      \n"
           ]
         }
       ],
