--- a/Mnemosyne.ipynb
+++ b/Mnemosyne.ipynb
@@ -1184,7 +1184,7 @@
         "                \"experiment_id\": \"EXP001\",\n",
         "                \"experiment_name\": \"Load GRP401EXP001 Dump and Report\",\n",
         "                \"description\": \"Loads a pre-existing KG dump file into Neo4j and then runs the report generation step.\",\n",
-        "                \"run_experiment\": True, \"run_workflow\": True, \"clear_database\": True, \"processing_stage\": \"LOADRPT\", \"kg_dump_file_id\": \"LOC302\"\n",
+        "                \"run_experiment\": False, \"run_workflow\": True, \"clear_database\": True, \"processing_stage\": \"LOADRPT\", \"kg_dump_file_id\": \"LOC302\"\n",
         "            },\n",
         "            {\n",
         "                \"experiment_id\": \"EXP002\",\n",
@@ -1196,13 +1196,13 @@
         "                \"experiment_id\": \"EXP003\",\n",
         "                \"experiment_name\": \"Load GRP401EXP003 Dump and Report\",\n",
         "                \"description\": \"Loads a pre-existing KG dump file into Neo4j and then runs the report generation step.\",\n",
-        "                \"run_experiment\": True, \"run_workflow\": True, \"clear_database\": True, \"processing_stage\": \"LOADRPT\", \"kg_dump_file_id\": \"LOC304\"\n",
+        "                \"run_experiment\": False, \"run_workflow\": True, \"clear_database\": True, \"processing_stage\": \"LOADRPT\", \"kg_dump_file_id\": \"LOC304\"\n",
         "            },\n",
         "            {\n",
         "                \"experiment_id\": \"EXP004\",\n",
         "                \"experiment_name\": \"Load GRP401EXP004 Dump and Report\",\n",
         "                \"description\": \"Loads a pre-existing KG dump file into Neo4j and then runs the report generation step.\",\n",
-        "                \"run_experiment\": True, \"run_workflow\": True, \"clear_database\": True, \"processing_stage\": \"LOADRPT\", \"kg_dump_file_id\": \"LOC305\"\n",
+        "                \"run_experiment\": False, \"run_workflow\": True, \"clear_database\": True, \"processing_stage\": \"LOADRPT\", \"kg_dump_file_id\": \"LOC305\"\n",
         "            },\n",
         "        ]\n",
         "    }\n",
@@ -4889,9 +4889,21 @@
         "                title=\"Circular Type Dependencies\",\n",
         "                description=\"This query identifies logical loops in the type hierarchy (e.g., A IS_A B, B IS_A A), which represent a structural inconsistency in the ontology.\",\n",
         "                query=f\"\"\"\n",
+        "                    // Find all circular paths\n",
         "                    MATCH path = (t1:Type{self.scoped_label})-[:IS_A*]->(t2:Type)-[:IS_A]->(t1)\n",
-        "                    WITH [node IN nodes(path) | node.displayName] AS CircularPath\n",
-        "                    RETURN CircularPath, count(*) AS Occurrences\n",
+        "                    // Get the unique nodes from the path to create a canonical representation\n",
+        "                    WITH nodes(path) AS pathNodes\n",
+        "                    UNWIND pathNodes AS p_node\n",
+        "                    WITH path, collect(DISTINCT p_node) AS uniqueNodesInLoop\n",
+        "                    // Sort the unique nodes by name to ensure the canonical path is always the same for a given loop\n",
+        "                    UNWIND uniqueNodesInLoop AS uniqueNode\n",
+        "                    WITH path, uniqueNode\n",
+        "                    ORDER BY uniqueNode.displayName\n",
+        "                    WITH path, collect(uniqueNode.displayName) AS canonicalPath\n",
+        "                    // Now, group by the canonical path and count the occurrences\n",
+        "                    RETURN\n",
+        "                      canonicalPath AS CircularPath,\n",
+        "                      count(*) AS Occurrences\n",
         "                    ORDER BY Occurrences DESC\n",
         "                \"\"\",\n",
         "                columns=[\"CircularPath\", \"Occurrences\"],\n",
