Updates from Overleaf

--- a/required-packages.tex
+++ b/required-packages.tex
@@ -78,6 +78,7 @@
 %==============================================================================
 \RequirePackage{setspace}         % For controlling line spacing (e.g., \doublespacing).
 \RequirePackage{verbatim}         % Provides the 'verbatim' environment for code.
+\RequirePackage{minted}
 
 %==============================================================================
 % HYPERLINKS & REFERENCING (Load these last)
