--- a/tex/frontmatter.tex
+++ b/tex/frontmatter.tex
@@ -3,7 +3,7 @@
 % --- CORE THESIS INFORMATION ---
 %==============================================================================
 % Full title of the thesis. Capitalize all significant words.
-\title{Using Large Language Models to Convert Documents to Knowledge Graphs to Check for Completeness and Consistency}
+\title{Mnemosyne: Using Large Language Models to Convert Documents to Knowledge Graphs to Check for Completeness and Consistency}
 
 % Author's name as it should appear on the title page.
 \author{Michael Wacey}
